Feat: Add adapter and populate ListView data from model

--- a/Day-13-of-100/app/src/main/res/layout/item_user.xml
+++ b/Day-13-of-100/app/src/main/res/layout/item_user.xml
@@ -44,7 +44,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        android:text="TextView"
+        android:text="name@domain.com"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/text_username"
         app:layout_constraintTop_toBottomOf="@+id/text_username" />
