--- a/Day-15-of-100/app/src/main/res/values/colors.xml
+++ b/Day-15-of-100/app/src/main/res/values/colors.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#4992F9</color>
+    <color name="colorPrimaryDark">#1E79F9</color>
+    <color name="colorBackground">#6fa7f6</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorBlack">#000000</color>
+    <color name="colorWhite">#ffffff</color>
+    <color name="colorDark">#999999</color>
+    <color name="colorDarker">#555555</color>
+    <color name="colorLine">#f1f1f1</color>
+    <color name="colorDarkHighlight">#AC8333</color>
+    <color name="colorHighlight">#F9AE1E</color>
 </resources>
